added images on listing card view

--- a/src/main/resources/static/JS/card.css
+++ b/src/main/resources/static/JS/card.css
@@ -9,7 +9,17 @@
 
 .card-img{
     height: 67%;
-    background: red;
+    /*background: red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden
+}
+
+.card-img img{
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%
 }
 
 .title {
