--- a/src/main/resources/static/JS/singleListing.css
+++ b/src/main/resources/static/JS/singleListing.css
@@ -31,3 +31,33 @@ p {
 .desc {
     width: 55em;
 }
+
+.btn {
+    border: 2px solid rgb(90, 90, 90);
+    background-color: #F7F7F7;
+    color: rgb(90, 90, 90);
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  /* Green */
+  .success {
+    border-color:  #8331A7;
+    color: #8331A7;
+  }
+  
+  .success:hover {
+    background-color:  #8331A7;
+    color: white;
+  }
+
+  .default {
+    border-color: rgb(90, 90, 90);
+    color: black;
+  }
+
+  .default:hover {
+    background: #e7e7e7;
+  }
