--- a/src/main/resources/static/JS/editListing.css
+++ b/src/main/resources/static/JS/editListing.css
@@ -1,6 +1,56 @@
 .listing-modal{
     width: 55em;
     height: 30em;
-    background-color: blue;
+    background-color: white;
+    border: 1px solid grey;
+    border-radius: 5px;
+    position: absolute;
     z-index: 100;
+    margin-top: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.listing-modal p {
+    margin: 0;
+}
+
+.edit-inner{
+    width: 90%;
+    height: 80%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.listing-modal button {
+    padding: 14px 20px;
+    margin-left: 2em;
+}
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+   
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
