--- a/src/main/resources/static/JS/editListing.css
+++ b/src/main/resources/static/JS/editListing.css
@@ -30,7 +30,7 @@
     margin-left: 2em;
 }
 
-input[type=text], select {
+.listing-modal input[type=text], select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -40,7 +40,7 @@ input[type=text], select {
     box-sizing: border-box;
   }
   
-  input[type=submit] {
+.listing-modal input[type=submit] {
    
     background-color: #4CAF50;
     color: white;
@@ -51,6 +51,6 @@ input[type=text], select {
     cursor: pointer;
   }
   
-  input[type=submit]:hover {
+.listing-modal input[type=submit]:hover {
     background-color: #45a049;
   }
